Update UI with list of fixed bugs reported by Ryan

--- a/ui/src/Utils/locale/DE.json
+++ b/ui/src/Utils/locale/DE.json
@@ -177,7 +177,7 @@
     "Level": "Niveau",
     "Automated Level": "Automatisierte Ebene",
     "Escalation": "Eskalation",
-    "Search": "Suche",
+    "Apply Filter": "Filter Anwenden",
     "Badge": "Abzeichen",
     "Username": "Nutzername",
     "First Name": "Vorname",
