--- a/ui/src/Utils/locale/EN-US.json
+++ b/ui/src/Utils/locale/EN-US.json
@@ -179,7 +179,7 @@
     "Level": "Level",
     "Automated Level": "Automated Level",
     "Escalation": "Escalation",
-    "Search": "Search",
+    "Apply Filter": "Apply Filter",
     "Badge": "Badge",
     "Username": "Username",
     "First Name": "First Name",
