--- a/ui/src/Utils/locale/ES.json
+++ b/ui/src/Utils/locale/ES.json
@@ -179,7 +179,7 @@
     "Level": "Nivel",
     "Automated Level": "Nivel de Automatización",
     "Escalation": "Escalación",
-    "Search": "Buscar",
+    "Apply Filter": "Aplicar Filtros",
     "Badge": "Insignia",
     "Username": "Usuario",
     "First Name": "Nombre",
