--- a/ui/src/Utils/locale/IT.json
+++ b/ui/src/Utils/locale/IT.json
@@ -178,7 +178,7 @@
     "Level": "Livello",
     "Automated Level": "Livello Automatizzato",
     "Escalation": "Escalazione",
-    "Search": "Ricerca",
+    "Apply Filter": "Applica il Filtro",
     "Badge": "Distintivo",
     "Username": "Nome Utente",
     "First Name": "Nome di Battesimo",
