--- a/ui/src/Utils/locale/KO.json
+++ b/ui/src/Utils/locale/KO.json
@@ -179,7 +179,7 @@
     "Level": "수평",
     "Automated Level": "자동화 된 레벨",
     "Escalation": "단계적 확대",
-    "Search": "검색",
+    "Apply Filter": "필터 적용",
     "Badge": "배지",
     "Username": "사용자 이름",
     "First Name": "이름",
