Update Tag module include validations, filter the table by status and translation

--- a/ui/src/Utils/locale/DE.json
+++ b/ui/src/Utils/locale/DE.json
@@ -228,5 +228,13 @@
     "Asset Level": "Maschinenebene",
     "All Assets": "Alle Maschinen",
     "Available Assets": "Verfügbare Maschinen",
-    "Selected Assets": "Ausgewählte Maschinen"
+    "Selected Assets": "Ausgewählte Maschinen",
+    "Data Type": "Datentyp",
+    "UOM Code": "UOM-Code",
+    "Rollover Point": "Überrollpunkt",
+    "Aggregation": "Anhäufung",
+    "Max Change": "Max. Änderung",
+    "Tag": "Etikett",
+    "Add Tag": "Etikett Hinzufügen",
+    "Update Tag": "Etikett Aktualisieren"
 }
