Update Reason module, complete create new reasons and edit reasons features

--- a/ui/src/Utils/locale/DE.json
+++ b/ui/src/Utils/locale/DE.json
@@ -236,5 +236,8 @@
     "Max Change": "Max. Änderung",
     "Tag": "Etikett",
     "Add Tag": "Etikett Hinzufügen",
-    "Update Tag": "Etikett Aktualisieren"
+    "Update Tag": "Etikett Aktualisieren",
+    "Select Area": "Bereich Auswählen",
+    "Add Reason": "Grund Hinzufügen",
+    "Update Reason": "Grund Aktualisieren"
 }
