--- a/ui/src/Utils/locale/EN-US.json
+++ b/ui/src/Utils/locale/EN-US.json
@@ -238,5 +238,8 @@
     "Max Change": "Max Change",
     "Tag": "Tag",
     "Add Tag": "Add Tag",
-    "Update Tag": "Update Tag"
+    "Update Tag": "Update Tag",
+    "Select Area": "Select Area",
+    "Add Reason": "Add Reason",
+    "Update Reason": "Update Reason"
 }
