--- a/ui/src/Utils/locale/IT.json
+++ b/ui/src/Utils/locale/IT.json
@@ -237,5 +237,8 @@
     "Max Change": "Variazione Massima",
     "Tag": "Etichetta",
     "Add Tag": "Aggiungi Etichetta",
-    "Update Tag": "Aggiorna Etichetta"
+    "Update Tag": "Aggiorna Etichetta",
+    "Select Area": "Seleziona l'area",
+    "Add Reason": "Aggiungi Motivo",
+    "Update Reason": "Ragione Aggiornamento"
 }
