--- a/ui/src/Utils/locale/KO.json
+++ b/ui/src/Utils/locale/KO.json
@@ -238,5 +238,8 @@
     "Max Change": "최대 변화",
     "Tag": "꼬리표",
     "Add Tag": "태그 추가",
-    "Update Tag": "태그 업데이트"
+    "Update Tag": "태그 업데이트",
+    "Select Area": "선택 부문",
+    "Add Reason": "이유 추가",
+    "Update Reason": "업데이트 이유"
 }
