--- a/ui/src/Utils/locale/DE.json
+++ b/ui/src/Utils/locale/DE.json
@@ -240,10 +240,26 @@
     "Select Area": "Bereich Auswählen",
     "Add Reason": "Grund Hinzufügen",
     "Update Reason": "Grund Aktualisieren",
+    "Add Asset": "Maschine Hinzufügen",
+    "Edit Asset": "Maschine Bearbeiten",
     "Reason 1": "Grund 1",
     "Reason 2": "Grund 2",
     "Parent Code": "Übergeordneter Code",
     "Automation Level": "Automatisierungsgrad",
     "Include in Escalation": "In Die Eskalation Einbeziehen",
-    "Is Multiple": "Ist Mehrfach"
+    "Is Multiple": "Ist Mehrfach",
+    "Is Dynamic": "ist Dynamisch",
+    "Value Stream": "Wertstrom",
+    "Step": "Schritt",
+    "Define Asset": "Maschine Definieren",
+    "Define Tag": "Etikett Definieren",
+    "Define Reason": "Grund Definieren",
+    "Define Break": "Pause Definieren",
+    "Next Step": "Nächster Schritt",
+    "Previous Step": "Vorheriger Schritt",
+    "Available Reasons": "Verfügbare Gründe",
+    "Selected Reasons": "Ausgewählte Gründe",
+    "Available Breaks": "Verfügbare Pausen",
+    "Selected Breaks": "Ausgewählte Pausen",
+    "End Steps": "Schritte Beenden"
 }
