--- a/ui/src/Utils/locale/ES.json
+++ b/ui/src/Utils/locale/ES.json
@@ -242,10 +242,26 @@
     "Select Area": "Seleccionar Area",
     "Add Reason": "Agregar Razón",
     "Update Reason": "Actualizar Razón",
+    "Add Asset": "Agregar Máquina",
+    "Edit Asset": "Editar Máquina",
     "Reason 1": "Reason 1",
     "Reason 2": "Reason 2",
     "Parent Code": "Código Padre",
     "Automation Level": "Nivel de Automaticación",
     "Include in Escalation": "Incluir en la Escalación",
-    "Is Multiple": "Es Multiple"
+    "Is Multiple": "Es Multiple",
+    "Is Dynamic": "Es Dinámico",
+    "Value Stream": "Flujo de Valor",
+    "Step": "Paso",
+    "Define Asset": "Definir Máquina",
+    "Define Tag": "Definir Etiqueta",
+    "Define Reason": "Definir Razón",
+    "Define Break": "Definir Descanso",
+    "Next Step": "Siguiente Paso",
+    "Previous Step": "Paso Previo",
+    "Available Reasons": "Razones Disponibles",
+    "Selected Reasons": "Razones Seleccionadas",
+    "Available Breaks": "Descansos Disponibles",
+    "Selected Breaks": "Descansos Seleccionados",
+    "End Steps": "Finzalizar Pasos"
 }
