--- a/ui/src/Utils/locale/KO.json
+++ b/ui/src/Utils/locale/KO.json
@@ -242,10 +242,26 @@
     "Select Area": "선택 부문",
     "Add Reason": "이유 추가",
     "Update Reason": "업데이트 이유",
+    "Add Asset": "추가 기계",
+    "Edit Asset": "기계 편집",
     "Reason 1": "이유 1",
     "Reason 2": "이유 2",
     "Parent Code": "부모 코드",
     "Automation Level": "자동화 수준",
     "Include in Escalation": "에스컬레이션에 포함",
-    "Is Multiple": "여러"
+    "Is Multiple": "여러",
+    "Is Dynamic": "역동적이다",
+    "Value Stream": "가치 흐름",
+    "Step": "단계",
+    "Define Asset": "기계 정의",
+    "Define Tag": "라벨 정의",
+    "Define Reason": "이유를 정의",
+    "Define Break": "휴식을 정의",
+    "Next Step": "다음 단계",
+    "Previous Step": "이전 단계",
+    "Available Reasons": "가능한 이유",
+    "Selected Reasons": "선택된 이유",
+    "Available Breaks": "가능한 휴식",
+    "Selected Breaks": "선택한 휴식",
+    "End Steps": "끝 단계"
 }
