Some fix include escalation, add missing translation words

--- a/ui/src/Utils/locale/DE.json
+++ b/ui/src/Utils/locale/DE.json
@@ -233,33 +233,43 @@
     "UOM Code": "UOM-Code",
     "Rollover Point": "Überrollpunkt",
     "Aggregation": "Anhäufung",
-    "Max Change": "Max. Änderung",
+    "Difference Between Values to Reset the Count": "Unterschied zwischen Werten zum Zurücksetzen der Zählung ",
     "Tag": "Etikett",
     "Add Tag": "Etikett Hinzufügen",
     "Update Tag": "Etikett Aktualisieren",
     "Select Area": "Bereich Auswählen",
     "Add Reason": "Grund Hinzufügen",
     "Update Reason": "Grund Aktualisieren",
-    "Add Asset": "Maschine Hinzufügen",
+    "Create Asset": "Maschine Erstellen",
     "Edit Asset": "Maschine Bearbeiten",
     "Reason 1": "Grund 1",
     "Reason 2": "Grund 2",
     "Parent Code": "Übergeordneter Code",
     "Automation Level": "Automatisierungsgrad",
     "Include in Escalation": "In Die Eskalation Einbeziehen",
-    "Is Multiple": "Ist Mehrfach",
-    "Is Dynamic": "ist Dynamisch",
+    "Multi Sign-In Machine": "Multi-Anmeldemaschine",
+    "Unscheduled Lunchs/Breaks": "Außerplanmäßiges Mittagessen / Pausen",
     "Value Stream": "Wertstrom",
     "Step": "Schritt",
     "Define Asset": "Maschine Definieren",
     "Define Tag": "Etikett Definieren",
-    "Define Reason": "Grund Definieren",
-    "Define Break": "Pause Definieren",
+    "Define Reason": "Grund Zuweisen",
+    "Assign Break": "Pause Zuweisen",
     "Next Step": "Nächster Schritt",
     "Previous Step": "Vorheriger Schritt",
     "Available Reasons": "Verfügbare Gründe",
     "Selected Reasons": "Ausgewählte Gründe",
     "Available Breaks": "Verfügbare Pausen",
     "Selected Breaks": "Ausgewählte Pausen",
-    "End Steps": "Schritte Beenden"
+    "End Steps": "Schritte Beenden",
+    "Copy User": "Benutzer Kopieren",
+    "Copy Asset": "Asset Kopieren",
+    "Apply": "Anwenden",
+    "Copy Shift": "Schicht Kopieren",
+    "Copy Reason": "Grund Kopieren",
+    "Copy Tag": "Etikett Kopieren",
+    "Copy Workcell": "Arbeitszelle Kopieren",
+    "Copy UOM": "UOM Kopieren",
+    "Copy Break": "Kopierpause",
+    "Copy Display": "Bildschirm Kopieren"
 }
