--- a/ui/src/Utils/locale/EN-US.json
+++ b/ui/src/Utils/locale/EN-US.json
@@ -235,33 +235,43 @@
     "UOM Code": "UOM Code",
     "Rollover Point": "Rollover Point",
     "Aggregation": "Aggregation",
-    "Max Change": "Max Change",
+    "Difference Between Values to Reset the Count": "Difference Between Values to Reset the Count",
     "Tag": "Tag",
     "Add Tag": "Add Tag",
     "Update Tag": "Update Tag",
     "Select Area": "Select Area",
     "Add Reason": "Add Reason",
     "Update Reason": "Update Reason",
-    "Add Asset": "Add Asset",
+    "Create Asset": "Create Asset",
     "Edit Asset": "Edit Asset",
     "Reason 1": "Reason 1",
     "Reason 2": "Reason 2",
     "Parent Code": "Parent Code",
     "Automation Level": "Automation Level",
     "Include in Escalation": "Include in Escalation",
-    "Is Multiple": "Is Multiple",
-    "Is Dynamic": "Is Dynamic",
+    "Multi Sign-In Machine": "Multi Sign-In Machine",
+    "Unscheduled Lunchs/Breaks": "Unscheduled Lunchs/Breaks",
     "Value Stream": "Value Stream",
     "Step": "Step",
     "Define Asset": "Define Asset",
     "Define Tag": "Define Tag",
-    "Define Reason": "Define Reason",
-    "Define Break": "Define Break",
+    "Assign Reason": "Assign Reason",
+    "Assign Break": "Assign Break",
     "Next Step": "Next Step",
     "Previous Step": "Previous Step",
     "Available Reasons": "Available Reasons",
     "Selected Reasons": "Selected Reasons",
     "Available Breaks": "Available Breaks",
     "Selected Breaks": "Selected Breaks",
-    "End Steps": "End Steps"
+    "End Steps": "End Steps",
+    "Copy User": "Copy User",
+    "Copy Asset": "Copy Asset",
+    "Apply": "Apply",
+    "Copy Shift": "Copy Shift",
+    "Copy Reason": "Copy Reason",
+    "Copy Tag": "Copy Tag",
+    "Copy Workcell": "Copy Workcell",
+    "Copy UOM": "Copy UOM",
+    "Copy Break": "Copy Break",
+    "Copy Display": "Copy Display"
 }
