--- a/ui/src/Utils/locale/ES.json
+++ b/ui/src/Utils/locale/ES.json
@@ -235,33 +235,43 @@
     "UOM Code": "Código UOM",
     "Rollover Point": "Punto de Reinicio",
     "Aggregation": "Agregación",
-    "Max Change": "Cambio Máximo",
+    "Difference Between Values to Reset the Count": "Differencia entre los valores para reiniciar el contador",
     "Tag": "Etiqueta",
     "Add Tag": "Agregar Etiqueta",
     "Update Tag": "Actualizar Etiqueta",
     "Select Area": "Seleccionar Area",
     "Add Reason": "Agregar Razón",
     "Update Reason": "Actualizar Razón",
-    "Add Asset": "Agregar Máquina",
+    "Create Asset": "Crear Máquina",
     "Edit Asset": "Editar Máquina",
     "Reason 1": "Reason 1",
     "Reason 2": "Reason 2",
     "Parent Code": "Código Padre",
     "Automation Level": "Nivel de Automaticación",
     "Include in Escalation": "Incluir en la Escalación",
-    "Is Multiple": "Es Multiple",
-    "Is Dynamic": "Es Dinámico",
+    "Multi Sign-In Machine": "Máquina de Accesso Multiple",
+    "Unscheduled Lunchs/Breaks": "Definir Almuerzo / Descanso",
     "Value Stream": "Flujo de Valor",
     "Step": "Paso",
     "Define Asset": "Definir Máquina",
     "Define Tag": "Definir Etiqueta",
-    "Define Reason": "Definir Razón",
-    "Define Break": "Definir Descanso",
+    "Assign Reason": "Asignar Razón",
+    "Asignar Break": "Asignar Descanso",
     "Next Step": "Siguiente Paso",
     "Previous Step": "Paso Previo",
     "Available Reasons": "Razones Disponibles",
     "Selected Reasons": "Razones Seleccionadas",
     "Available Breaks": "Descansos Disponibles",
     "Selected Breaks": "Descansos Seleccionados",
-    "End Steps": "Finzalizar Pasos"
+    "End Steps": "Finzalizar Pasos",
+    "Copy User": "Copiar Usuario",
+    "Copy Asset": "Copiar Máquina",
+    "Apply": "Aplicar",
+    "Copy Shift": "Copiar Turno",
+    "Copy Reason": "Copiar Razón",
+    "Copy Tag": "Copiar Etiqueta",
+    "Copy Workcell": "Copiar Celda de Trabajo",
+    "Copy UOM": "Copiar UOM",
+    "Copy Break": "Copiar Descanso",
+    "Copy Display": "Copiar Pantalla de Máquina"
 }
