--- a/ui/src/Utils/locale/IT.json
+++ b/ui/src/Utils/locale/IT.json
@@ -234,33 +234,43 @@
     "UOM Code": "Codice UOM",
     "Rollover Point": "Punto di Rollover",
     "Aggregation": "Aggregazione",
-    "Max Change": "Variazione Massima",
+    "Difference Between Values to Reset the Count": "Differenza tra i Valori per Azzerare il Conteggio",
     "Tag": "Etichetta",
     "Add Tag": "Aggiungi Etichetta",
     "Update Tag": "Aggiorna Etichetta",
     "Select Area": "Seleziona l'area",
     "Add Reason": "Aggiungi Motivo",
     "Update Reason": "Ragione Aggiornamento",
-    "Add Asset": "Aggiungi Macchina",
+    "Create Asset": "Creare Macchina",
     "Edit Asset": "Modifica Macchina",
     "Reason 1": "Motivo 1",
     "Reason 2": "Motivo 2",
     "Parent Code": "Codice Genitore",
     "Automation Level": "Livello di Automazione",
-    "Include in Escalation": "Includi nell'escalation",
-    "Is Multiple": "È Multipla",
-    "Is Dynamic": "È Dinamico",
+    "Include in Escalation": "Includi nell' escalation",
+    "Multi Sign-In Machine": "Macchina di Accesso Multiplo",
+    "Unscheduled Lunchs/Breaks": "Pranzi / pause non programmati",
     "Value Stream": "Flusso di Valore",
     "Step": "Passo",
     "Define Asset": "Definire la Macchina",
     "Define Tag": "Definire l'Etichetta",
-    "Define Reason": "Definire la Ragione",
-    "Define Break": "Definire Pausa",
+    "Assign Reason": "Assegna Motivo",
+    "Assign Break": "Assegna Pausa",
     "Next Step": "Passo Successivo",
     "Previous Step": "Passo Precedente",
     "Available Reasons": "Ragioni Disponibili",
     "Selected Reasons": "Motivi Selezionati",
     "Available Breaks": "Pause Disponibili",
     "Selected Breaks": "Pause Selezionate",
-    "End Steps": "Fine dei Passaggi"
+    "End Steps": "Fine dei Passaggi",
+    "Copy User": "Copia utente",
+    "Copy Asset": "Copia Macchina",
+    "Apply": "Applicare",
+    "Copy Shift": "Copia Turno",
+    "Copy Reason": "Copia Motivo",
+    "Copy Tag": "Copia Etichetta",
+    "Copy Workcell": "Copia Cella di Lavoro",
+    "Copy UOM": "Copia UOM",
+    "Copy Break": "Copia Pausa",
+    "Copy Display": "Copia Visualizzazione"
 }
