--- a/ui/src/Utils/locale/KO.json
+++ b/ui/src/Utils/locale/KO.json
@@ -235,33 +235,43 @@
     "UOM Code": "UOM 코드",
     "Rollover Point": "롤오버 지점",
     "Aggregation": "집합체",
-    "Max Change": "최대 변화",
+    "Difference Between Values to Reset the Count": "카운트 재설정을위한 값의 차이",
     "Tag": "꼬리표",
     "Add Tag": "태그 추가",
     "Update Tag": "태그 업데이트",
     "Select Area": "선택 부문",
     "Add Reason": "이유 추가",
     "Update Reason": "업데이트 이유",
-    "Add Asset": "추가 기계",
+    "Create Asset": "머신 생성",
     "Edit Asset": "기계 편집",
     "Reason 1": "이유 1",
     "Reason 2": "이유 2",
     "Parent Code": "부모 코드",
     "Automation Level": "자동화 수준",
     "Include in Escalation": "에스컬레이션에 포함",
-    "Is Multiple": "여러",
-    "Is Dynamic": "역동적이다",
+    "Multi Sign-In Machine": "멀티 로그인 머신",
+    "Unscheduled Lunchs/Breaks": "예정되지 않은 점심 / 휴식",
     "Value Stream": "가치 흐름",
     "Step": "단계",
     "Define Asset": "기계 정의",
     "Define Tag": "라벨 정의",
-    "Define Reason": "이유를 정의",
-    "Define Break": "휴식을 정의",
+    "Assign Reason": "이유 지정",
+    "Assign Break": "휴식 지정",
     "Next Step": "다음 단계",
     "Previous Step": "이전 단계",
     "Available Reasons": "가능한 이유",
     "Selected Reasons": "선택된 이유",
     "Available Breaks": "가능한 휴식",
     "Selected Breaks": "선택한 휴식",
-    "End Steps": "끝 단계"
+    "End Steps": "끝 단계",
+    "Copy User": "사용자 복사",
+    "Copy Asset": "자산 복사",
+    "Apply": "대다",
+    "Copy Shift": "시프트 복사",
+    "Copy Reason": "이유 복사",
+    "Copy Tag": "태그 복사",
+    "Copy Workcell": "작업 셀 복사",
+    "Copy UOM": "UOM 복사",
+    "Copy Break": "복사 나누기",
+    "Copy Display": "디스플레이 복사"
 }
