Fix issues and include some changes from Ryan's feedback

--- a/ui/src/Utils/locale/DE.json
+++ b/ui/src/Utils/locale/DE.json
@@ -271,5 +271,6 @@
     "Copy Workcell": "Arbeitszelle Kopieren",
     "Copy UOM": "UOM Kopieren",
     "Copy Break": "Kopierpause",
-    "Copy Display": "Bildschirm Kopieren"
+    "Copy Display": "Bildschirm Kopieren",
+    "Site Prefix Code": "Site-Präfix-Code"
 }
