--- a/ui/src/Utils/locale/EN-US.json
+++ b/ui/src/Utils/locale/EN-US.json
@@ -273,5 +273,6 @@
     "Copy Workcell": "Copy Workcell",
     "Copy UOM": "Copy UOM",
     "Copy Break": "Copy Break",
-    "Copy Display": "Copy Display"
+    "Copy Display": "Copy Display",
+    "Site Prefix Code": "Site Prefix Code"
 }
