--- a/ui/src/Utils/locale/IT.json
+++ b/ui/src/Utils/locale/IT.json
@@ -272,5 +272,6 @@
     "Copy Workcell": "Copia Cella di Lavoro",
     "Copy UOM": "Copia UOM",
     "Copy Break": "Copia Pausa",
-    "Copy Display": "Copia Visualizzazione"
+    "Copy Display": "Copia Visualizzazione",
+    "Site Prefix Code": "Codice Prefisso Sito"
 }
