Update translation files

--- a/ui/src/Utils/locale/DE.json
+++ b/ui/src/Utils/locale/DE.json
@@ -244,7 +244,7 @@
     "Edit Asset": "Maschine Bearbeiten",
     "Reason 1": "Grund 1",
     "Reason 2": "Grund 2",
-    "Parent Code": "Übergeordneter Code",
+    "Parent Asset": "Übergeordneter Maschine",
     "Automation Level": "Automatisierungsgrad",
     "Include in Escalation": "In Die Eskalation Einbeziehen",
     "Multi Sign-In Machine": "Multi-Anmeldemaschine",
