--- a/ui/src/Utils/locale/EN-US.json
+++ b/ui/src/Utils/locale/EN-US.json
@@ -246,7 +246,7 @@
     "Edit Asset": "Edit Asset",
     "Reason 1": "Reason 1",
     "Reason 2": "Reason 2",
-    "Parent Code": "Parent Code",
+    "Parent Asset": "Parent Asset",
     "Automation Level": "Automation Level",
     "Include in Escalation": "Include in Escalation",
     "Multi Sign-In Machine": "Multi Sign-In Machine",
