--- a/ui/src/Utils/locale/ES.json
+++ b/ui/src/Utils/locale/ES.json
@@ -246,7 +246,7 @@
     "Edit Asset": "Editar Máquina",
     "Reason 1": "Reason 1",
     "Reason 2": "Reason 2",
-    "Parent Code": "Código Padre",
+    "Parent Asset": "Máquina Padre",
     "Automation Level": "Nivel de Automaticación",
     "Include in Escalation": "Incluir en la Escalación",
     "Multi Sign-In Machine": "Máquina de Accesso Multiple",
