--- a/ui/src/Utils/locale/IT.json
+++ b/ui/src/Utils/locale/IT.json
@@ -245,7 +245,7 @@
     "Edit Asset": "Modifica Macchina",
     "Reason 1": "Motivo 1",
     "Reason 2": "Motivo 2",
-    "Parent Code": "Codice Genitore",
+    "Parent Asset": "Macchina Genitore",
     "Automation Level": "Livello di Automazione",
     "Include in Escalation": "Includi nell' escalation",
     "Multi Sign-In Machine": "Macchina di Accesso Multiplo",
