--- a/ui/src/Utils/locale/KO.json
+++ b/ui/src/Utils/locale/KO.json
@@ -246,7 +246,7 @@
     "Edit Asset": "기계 편집",
     "Reason 1": "이유 1",
     "Reason 2": "이유 2",
-    "Parent Code": "부모 코드",
+    "Parent Asset": "부모 기계",
     "Automation Level": "자동화 수준",
     "Include in Escalation": "에스컬레이션에 포함",
     "Multi Sign-In Machine": "멀티 로그인 머신",
